--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -11,6 +11,8 @@ html {
   font-size: 16px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* Prevent scrollbar from causing layout shifts */
+  overflow-y: scroll;
 }
 
 body {
